feat(admin): agregar métricas de citas pendientes y actas al dashboard